[gd_scene load_steps=8 format=3 uid="uid://bwpt83xs1t5vq"]

[ext_resource type="FontFile" uid="uid://ewapdr1gqw01" path="res://PreFabs/ThaleahFat.ttf" id="1_vixdj"]
[ext_resource type="Script" path="res://Scenes/Video.gd" id="2_qvxnm"]
[ext_resource type="Script" path="res://Scenes/Audio.gd" id="3_lx372"]

[sub_resource type="GDScript" id="GDScript_4oec4"]
script/source = "extends Control

func _on_back_button_button_up():
	get_tree().change_scene_to_file(\"res://Scenes/main_menu.tscn\")


func _on_full_screen_toggled(toggled_on):
	if toggled_on:
		DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_FULLSCREEN)
	else:
		DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_WINDOWED)

func _on_borderless_toggled(toggle_on):
	DisplayServer.window_get_flag(DisplayServer.WINDOW_FLAG_BORDERLESS, toggle_on)

func _on_v_sync_item_selected(index):
	DisplayServer.window_set_vsync_mode(index)
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm0j1"]
bg_color = Color(0.101961, 0.0862745, 0.145098, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bduj1"]
bg_color = Color(0, 0, 0, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgnqm"]
bg_color = Color(0, 0, 0, 0.784314)

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_4oec4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.32549, 0.219608, 0.25098, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 88.8
theme_override_colors/font_color = Color(0.564706, 0.407843, 0.454902, 1)
theme_override_colors/font_shadow_color = Color(0.141176, 0.0705882, 0.054902, 1)
theme_override_constants/shadow_offset_x = 14
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("1_vixdj")
theme_override_font_sizes/font_size = 120
text = "The Legend 
of forkner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionZone" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionZone"]
layout_mode = 2

[node name="Answer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/OptionZone/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionZone"]
layout_mode = 2
alignment = 2

[node name="BackButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/OptionZone/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/OptionZone/HBoxContainer/BackButtonContainer"]
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_vixdj")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_bm0j1")
theme_override_styles/hover = SubResource("StyleBoxFlat_bduj1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rgnqm")
text = "BACK
"

[node name="Video" type="Control" parent="."]
anchors_preset = 0
offset_right = 462.0
offset_bottom = 543.0
script = ExtResource("2_qvxnm")

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = 77.0
offset_right = 273.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 55
alignment = 1

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="VSync" type="OptionButton" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
item_count = 4
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Audio" type="Control" parent="."]
anchors_preset = 0
offset_left = -140.0
offset_top = 271.0
offset_right = -100.0
offset_bottom = 311.0
script = ExtResource("3_lx372")

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 705.0
offset_top = -24.0
offset_right = 1229.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music    "

[node name="Sound FX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Sound FX  "

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 65
alignment = 1

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="Sound FX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[connection signal="button_up" from="MarginContainer/VBoxContainer/OptionZone/HBoxContainer/BackButtonContainer/BackButton" to="." method="_on_back_button_button_up"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="item_selected" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_item_selected"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_music_value_changed"]
